# social_media_app

./: gunicorn.service  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0511a011a53d_add_content_column_to_posts_table.py  28ca35d64d80_add_user_table_with_all_columns.py  490aaf4cc027_add_votes_tabel_auto.py  5a4bb140e54b_create_post_table.py  762b9414b65b_add_foreing_key_to_posts_table.py  a6b7a4e81b6d_add_table_vote.py  c5451b693819_add_user_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
test/: database.py  test_calc.py  test_users.py
